--- a/app/assets/scripts/templates/homepage.ejs
+++ b/app/assets/scripts/templates/homepage.ejs
@@ -5,9 +5,8 @@
     <div class="overlay-dark">
       <div class="row">
         <div class="prose prose-home">
-          <h1 class="prose-prime-title">Assessing Global Oils</h1>
-          <p class="copy-feature">Oil is the world’s largest and most diverse source of fossil fuel energy. It is found in a wide range of regions and is buried in very different kinds of geologic deposits. Oils have varied chemical makeups, and an array of technologies are needed to extract and refine each oil before it reaches consumers.</p>
-          <p class="copy-feature">The OCI quantifies these differences to estimate both the amount and the profile of greenhouse gas (GHG) emissions produced throughout an individual oil’s supply chain. Drill down to see where oils’ GHG emissions arise and how they can be reduced.</p>
+          <h1 class="prose-prime-title">Disclaimer</h1>
+          <p class="copy-feature">This is a sandbox version of the Oil-Climate Index. The data shown here may not be accurate. Any reference of the outputs or data reported in the sandbox version of the Oil-Climate Index constitutes a violation of the terms of use. For the working version of Phase 2.0 of the Oil-Climate Index please visit <a href='oci.carnegieendowment.org'></p>
         </div>
         <div class="attribution"><a href="https://www.mapbox.com/about/maps/" target="_blank">© Mapbox</a><a href="https://www.digitalglobe.com/" target="_blank">© DigitalGlobe</a></div>
       </div>
