--- a/app/assets/scripts/templates/supplycurve.ejs
+++ b/app/assets/scripts/templates/supplycurve.ejs
@@ -49,7 +49,7 @@
           <fieldset id="region-select">
             <legend class="control-title">Filter by Region</legend>
             <div class="checkbox">
-              <label><input type="checkbox" name="region-select" value="Asia-Pacific"> Asia-Pacific</label>
+              <label><input type="checkbox" name="region-select" value="District 1"> District 1</label>
             </div>
             <div class="checkbox">
               <label><input type="checkbox" name="region-select" value="Europe"> Europe</label>
