--- a/app/assets/scripts/templates/compareoils.ejs
+++ b/app/assets/scripts/templates/compareoils.ejs
@@ -110,25 +110,22 @@
               <fieldset id="region-select">
                 <legend class="control-title">Filter by Region</legend>
                 <div class="checkbox">
-                  <label><input type="checkbox" name="region-select" value="Asia-Pacific"> Asia-Pacific</label>
+                  <label><input type="checkbox" name="region-select" value="District 1"> District 1</label>
                 </div>
                 <div class="checkbox">
-                  <label><input type="checkbox" name="region-select" value="Europe"> Europe</label>
+                  <label><input type="checkbox" name="region-select" value="District 2"> District 2</label>
                 </div>
                 <div class="checkbox">
-                  <label><input type="checkbox" name="region-select" value="Russia & Eurasia"> Russia & Eurasia</label>
+                  <label><input type="checkbox" name="region-select" value="District 3"> District 3</label>
                 </div>
                 <div class="checkbox">
-                  <label><input type="checkbox" name="region-select" value="Middle East & N. Africa"> Middle East & North Africa</label>
+                  <label><input type="checkbox" name="region-select" value="District 4"> District 4</label>
                 </div>
                 <div class="checkbox">
-                  <label><input type="checkbox" name="region-select" value="North America"> North America</label>
+                  <label><input type="checkbox" name="region-select" value="District 5"> District 5</label>
                 </div>
                 <div class="checkbox">
-                  <label><input type="checkbox" name="region-select" value="S. America & Carribean"> South America & Carribean</label>
-                </div>
-                <div class="checkbox">
-                  <label><input type="checkbox" name="region-select" value="Sub-Saharan Africa"> Sub-Saharan Africa</label>
+                  <label><input type="checkbox" name="region-select" value="District 6"> District 6</label>
                 </div>
               </fieldset>
             </div>
