--- a/app/assets/scripts/templates/supplycurve.ejs
+++ b/app/assets/scripts/templates/supplycurve.ejs
@@ -47,7 +47,7 @@
 
         <div class="control-section">
           <fieldset id="region-select">
-            <legend class="control-title">Filter by Region</legend>
+            <legend class="control-title">Filter by DOGGR Region</legend>
             <div class="checkbox">
               <label><input type="checkbox" name="region-select" value="District 1"> District 1</label>
             </div>
